# cdcanary

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/demo/: docker-compose.yml  seed-replica.sql  seed-source.sql
examples/github-actions/: README.md  cdcanary-check.yml
src/cdcanary/: __init__.py  cli.py  config.py  runner.py  urls.py
src/cdcanary/adapters/: base.py  bigquery.py  mysql.py  postgres.py
src/cdcanary/alert/: slack.py
src/cdcanary/checks/: base.py  freshness.py  null_rate.py  row_delta.py  sampled_checksum.py  schema_drift.py
tests/: conftest.py  test_checks.py  test_config.py  test_discovery.py  test_examples.py
tests/integration/: test_demo_pair.py
